--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="footer_copyright">© 2020 Mesto Russia</p>
+      <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
 
     <div class="popup visible">
