--- a/index.html
+++ b/index.html
@@ -24,38 +24,50 @@
       <section class="elements">
         <article class="element">
           <img class="element__img" src="./images/kirill-pershin-1088404-unsplash-1.jpg" alt="фотография Карачаевска">
-          <h2 class="element__title">Карачаевск</h2>
-          <button class="element__btn-heart"></button>
+          <div class="flex-row-betw">
+            <h2 class="element__title">Карачаевск</h2>
+            <button type="button" class="element__btn-heart"></button>
+          </div>
         </article>
 
         <article class="element">
           <img class="element__img"  src="./images/kirill-pershin-1404681-unsplash-1.jpg" alt="фотография горы Эльбрус">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button class="element__btn-heart"></button>
+          <div class="flex-row-betw">
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <button type="button" class="element__btn-heart"></button>
+          </div>
         </article>
 
         <article class="element">
           <img class="element__img" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="фотографя Домбай">
-          <h2 class="element__title">Домбай</h2>
-          <button class="element__btn-heart"></button>
+          <div class="flex-row-betw">
+            <h2 class="element__title">Домбай</h2>
+            <button type="button" class="element__btn-heart"></button>
+          </div>
         </article>
 
         <article class="element">
           <img class="element__img" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="фотография горы Эльбрус">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button class="element__btn-heart"></button>
+          <div class="flex-row-betw">
+           <h2 class="element__title">Гора Эльбрус</h2>
+            <button type="button" class="element__btn-heart"></button>
+          </div>
         </article>
 
         <article class="element">
           <img class="element__img" src="./images/kirill-pershin-1556355-unsplash-1.jpg" alt="фотографя Домбай">
-          <h2 class="element__title">Домбай</h2>
-          <button class="element__btn-heart"></button>
+          <div class="flex-row-betw">
+            <h2 class="element__title">Домбай</h2>
+            <button type="button" class="element__btn-heart"></button>
+          </div>
         </article>
 
         <article class="element">
           <img class="element__img" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фотография Карачаевска">
-          <h2 class="element__title">Карачаевск</h2>
-          <button class="element__btn-heart"></button>
+          <div class="flex-row-betw">
+            <h2 class="element__title">Карачаевск</h2>
+            <button type="button" class="element__btn-heart"></button>
+          </div>
         </article>
 
       </section>
@@ -68,9 +80,9 @@
       <div class="popup__container">
         <button type="button" class="popup__btn-close"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form">
-          <input class="popup__input-name" type="text" placeholder="Имя" required>
-          <input class="popup__about" type="text" placeholder="Призвание">
+        <form class="popup__form" name="popup_f">
+          <input name="popup_in" class="popup__input-name" type="text" placeholder="Имя" required>
+          <input name=popup_a class="popup__about" type="text" placeholder="Призвание">
           <button type="submit" class="popup__btn-save">Сохранить</button>
         </form>
       </div>
