--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="popup_form">
-          <input name="popup_name" class="popup__input" type="text" placeholder="Имя" required>
-          <input name="popup_about" class="popup__input" type="text" placeholder="Призвание">
+          <input name="popup_name" id="popup_name" class="popup__input" type="text" placeholder="Имя" required>
+          <input name="popup_about" id="popup_about" class="popup__input" type="text" placeholder="Призвание">
           <button type="submit" class="popup__btn-save">Сохранить</button>
         </form>
       </div>
