--- a/index.html
+++ b/index.html
@@ -22,72 +22,57 @@
         <button type="button" class="profile__btn-add" aria-label="Добавить"></button>
       </section>
       <section class="elements">
-        <article class="element">
-          <img class="element__img" src="./images/kirill-pershin-1088404-unsplash-1.jpg" alt="фотография Карачаевска">
-          <div class="element__cont">
-            <h2 class="element__title">Карачаевск</h2>
-            <button type="button" class="element__btn-heart" aria-label="Сердечко"></button>
-          </div>
-        </article>
-
-        <article class="element">
-          <img class="element__img"  src="./images/kirill-pershin-1404681-unsplash-1.jpg" alt="фотография горы Эльбрус">
-          <div class="element__cont">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="button" class="element__btn-heart" aria-label="Сердечко"></button>
-          </div>
-        </article>
-
-        <article class="element">
-          <img class="element__img" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="фотографя Домбай">
-          <div class="element__cont">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__btn-heart" aria-label="Сердечко"></button>
-          </div>
-        </article>
-
-        <article class="element">
-          <img class="element__img" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="фотография горы Эльбрус">
-          <div class="element__cont">
-           <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="button" class="element__btn-heart" aria-label="Сердечко"></button>
-          </div>
-        </article>
-
-        <article class="element">
-          <img class="element__img" src="./images/kirill-pershin-1556355-unsplash-1.jpg" alt="фотографя Домбай">
-          <div class="element__cont">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__btn-heart" aria-label="Сердечко"></button>
-          </div>
-        </article>
-
-        <article class="element">
-          <img class="element__img" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фотография Карачаевска">
-          <div class="element__cont">
-            <h2 class="element__title">Карачаевск</h2>
-            <button type="button" class="element__btn-heart" aria-label="Сердечко"></button>
-          </div>
-        </article>
-
+        
       </section>
     </main>
     <footer class="footer">
-      <p class="footer__copyright">© 2020 Mesto Russia</p>
+      <p class="footer__copyright">© 2022 Mesto Russia</p>
     </footer>
 
-    <div class="popup popup_invisible">
+    <div class="popup popup_invisible popup_profile_js">
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="popup_form">
-          <input name="popup_name" id="popup_name" class="popup__input" type="text" placeholder="Имя" required>
-          <input name="popup_about" id="popup_about" class="popup__input" type="text" placeholder="Призвание">
+          <input name="popup_name" class="popup__input popup__input_name_js" type="text" placeholder="Имя" required>
+          <input name="popup_about" class="popup__input popup__input_about_js" type="text" placeholder="Призвание">
           <button type="submit" class="popup__btn-save">Сохранить</button>
         </form>
       </div>
     </div>
+
+    <div class="popup popup_invisible popup_element_js">
+      <div class="popup__container">
+        <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form" name="popup_form">
+          <input name="popup_name" class="popup__input popup__input_name_js" type="text" placeholder="Название" required>
+          <input name="popup_link" class="popup__input popup__input_link_js" type="text" placeholder="Ссылка на картинку">
+          <button type="submit" class="popup__btn-save">Создать</button>
+        </form>
+      </div>
+    </div>
+
+    <!--<div class="popup popup_invisible popup_photo_js">
+      <figure class="popup__figure">
+        <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
+        <img class="popup__img" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg">
+        <figcaption class="popup__figcap"></figcaption>
+      </figure>
+    </div>-->
+
+    <template class="template_element">
+      <article class="element">
+        <img class="element__img" >
+        <button type="button" class="element__btn-delete" aria-label="Удалить"></button>
+        <div class="element__cont">
+          <h2 class="element__title"></h2>
+          <button type="button" class="element__btn-heart" aria-label="Сердечко"></button>
+        </div>
+      </article>
+    </template>
   </div>
+  <script type="text/javascript" src="./scripts/initialData.js"></script>
   <script type="text/javascript" src="./scripts/info_update.js"></script>
 </body>
 </html>
