--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <p class="footer__copyright">© 2022 Mesto Russia</p>
     </footer>
 
+
     <div class="popup popup_invisible popup_profile_js">
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
@@ -52,18 +53,17 @@
         </form>
       </div>
     </div>
-
-    <!--<div class="popup popup_invisible popup_photo_js">
+    <div class="popup popup_invisible popup_photo_js">
       <figure class="popup__figure">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
-        <img class="popup__img" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg">
+        <img class="popup__img">
         <figcaption class="popup__figcap"></figcaption>
       </figure>
-    </div>-->
+    </div>
 
     <template class="template_element">
       <article class="element">
-        <img class="element__img" >
+        <img class="element__img">
         <button type="button" class="element__btn-delete" aria-label="Удалить"></button>
         <div class="element__cont">
           <h2 class="element__title"></h2>
