--- a/index.html
+++ b/index.html
@@ -30,30 +30,35 @@
     </footer>
 
 
-    <div class="popup popup_invisible popup_profile_js">
+    <div class="popup popup_profile_js">
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="popup_form">
-          <input name="popup_name" class="popup__input popup__input_name_js" type="text" placeholder="Имя" required>
-          <input name="popup_about" class="popup__input popup__input_about_js" type="text" placeholder="Призвание">
+        <form class="popup__form" name="popup_form" novalidate>
+          <!--Контейнер на input/span? а зачем контейнер пустышка? не будем использовать лишние обертки как и говорится в задании. только если для связки input\span, но и в тренажере и вебинаре обходились без этого-->
+          <input id="popup__input_name" name="popup_name" class="popup__input popup__input_name_js" type="text" placeholder="Имя" required minlength="2" maxlength="40">
+          <span class="popup__error popup__input_name_error_js">Error1</span>
+          <input id="popup__input_about" name="popup_about" class="popup__input popup__input_about_js" type="text" placeholder="Призвание" required  minlength="2" maxlength="200">
+          <span class="popup__error popup__input_about_error_js">Error2</span>
           <button type="submit" class="popup__btn-save">Сохранить</button>
         </form>
       </div>
     </div>
 
-    <div class="popup popup_invisible popup_element_js">
+    <div class="popup popup_element_js">
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" name="popup_form">
-          <input name="popup_name" class="popup__input popup__input_name_js" type="text" placeholder="Название" required>
-          <input name="popup_link" class="popup__input popup__input_link_js" type="text" placeholder="Ссылка на картинку">
+        <form class="popup__form" name="popup_form" novalidate>
+          <input id="popup__input_name" name="popup_name" class="popup__input popup__input_name_js" type="text" placeholder="Название" required minlength="2" maxlength="30">
+          <span class="popup__error popup__input_name_error_js">Error3</span>
+          <input id="popup__input_link" name="popup_link" class="popup__input popup__input_link_js" type="url" placeholder="Ссылка на картинку" required>
+          <span class="popup__error popup__input_link_error_js">Error4</span>
           <button type="submit" class="popup__btn-save">Создать</button>
         </form>
       </div>
     </div>
-    <div class="popup popup_invisible popup_photo_js">
+    <div class="popup popup_photo_js">
       <figure class="popup__figure">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <img class="popup__img">
