--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
       </article>
     </template>
   </div>
+  <script type="text/javascript" src="./scripts/validate.js"></script>
   <script type="text/javascript" src="./scripts/initialData.js"></script>
   <script type="text/javascript" src="./scripts/info_update.js"></script>
+  
 </body>
 </html>
