--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Новое место</h2>
         <form class="popup__form" name="popup_form" novalidate>
-          <input id="popup__input_name" name="popup_name" class="popup__input popup__input_name_js" type="text" placeholder="Название" required minlength="2" maxlength="30">
-          <span class="popup__error popup__input_name_error_js">Error3</span>
+          <input id="popup__photo_name" name="popup_name" class="popup__input popup__input_name_js" type="text" placeholder="Название" required minlength="2" maxlength="30">
+          <span class="popup__error popup__photo_name_error_js">Error3</span>
           <input id="popup__input_link" name="popup_link" class="popup__input popup__input_link_js" type="url" placeholder="Ссылка на картинку" required>
           <span class="popup__error popup__input_link_error_js">Error4</span>
           <button type="submit" class="popup__btn-save">Создать</button>
