--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form form_type_edit-js" name="popup_form" novalidate>
+        <form class="popup__form popup__form_type_edit-js" name="popup_form" novalidate>
           <!--Контейнер на input/span? а зачем контейнер пустышка? не будем использовать лишние обертки как и говорится в задании. только если для связки input\span, но и в тренажере и вебинаре обходились без этого-->
           <input id="name" name="popup_name" class="popup__input popup__input_js_name" type="text" placeholder="Имя" required minlength="2" maxlength="40">
           <span class="popup__error popup__error_js_name"></span>
@@ -49,7 +49,7 @@
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form form_type_add-card-js" name="popup_form" novalidate>
+        <form class="popup__form popup__form_type_add-card-js" name="popup_form" novalidate>
           <input id="photoName" name="popup_name" class="popup__input popup__input_js_name" type="text" placeholder="Название" required minlength="2" maxlength="30">
           <span class="popup__error popup__error_js_photoName"></span>
           <input id="link" name="popup_link" class="popup__input popup__input_js_link" type="url" placeholder="Ссылка на картинку" required>
