--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,6 @@
       </article>
     </template>
   </div>
-  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
