--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
         <!-- <img class="profile__avatar" src="./images/avatar.jpg" alt="Фотография пользователя"> -->
         <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография пользователя">
         <div class="profile__info">
-          <h1 class="profile__user-name">Жак-Ив Кусто</h1>
+          <h1 class="profile__user-name"></h1> <!-- Жак-Ив Кусто -->
           <button type="button" class="profile__btn-edit" aria-label="Редактировать"></button>
-          <p class="profile__user-description">Исследователь океана</p>
+          <p class="profile__user-description"></p> <!-- Исследователь океана -->
         </div>
         <button type="button" class="profile__btn-add" aria-label="Добавить"></button>
       </section>
