--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,7 @@
         <div class="element__cont">
           <h2 class="element__title"></h2>
           <button type="button" class="element__btn-heart" aria-label="Сердечко"></button>
+          <span type="button" class="element__like-count"></span>
         </div>
       </article>
     </template>
