--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,17 @@
         </form>
       </div>
     </div>
+
+    <div class="popup popup_js_delete">
+      <div class="popup__container">
+        <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <form class="popup__form popup__form_type_delete-js" name="popup_form" novalidate>
+          <button type="submit" class="popup__btn-delete">Да</button>
+        </form>
+      </div>
+    </div>
+
     <div class="popup popup_js_photo">
       <figure class="popup__figure">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
