pr9 1-10 finish without debug

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,6 @@
         <div class="profile__avatar-cont">
           <!-- <img class="profile__avatar" src="./images/avatar.jpg" alt="Фотография пользователя"> -->
           <img class="profile__avatar" src="<%=require('./images/black.jpg')%>"  alt="Фотография пользователя"> <!-- src="<%=require('./images/avatar.jpg')%>" -->
-          <!-- <figure class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография пользователя"></figure> -->
         </div>
         <div class="profile__info">
           <h1 class="profile__user-name"></h1> <!-- Жак-Ив Кусто -->
@@ -34,7 +33,7 @@
     </footer>
 
 
-    <div class="popup popup_js_profile"><!--Теперь все ключ-значение, с ключом js, ключ указывает на то, что это класс пустышка и очень полезен. если есть другие способы определять пустышки то рад буду узнать-->
+    <div class="popup popup_js_profile">
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -69,7 +68,7 @@
         <form class="popup__form popup__form_type_avatar-update-js" name="popup_form" novalidate>
           <input id="link-update" name="popup_link-update" class="popup__input popup__input_js_link-update" type="url" placeholder="Ссылка на картинку" required>
           <span class="popup__error popup__error_js_link-update"></span>
-          <button type="submit" class="popup__btn-save popup__btn-update">Создать</button>
+          <button type="submit" class="popup__btn-save popup__btn-update">Сохранить</button>
         </form>
       </div>
     </div>
