--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form popup__form_type_edit-js" name="popup_form" novalidate>
+        <form class="popup__form popup__form_type_edit-js" name="popup_form-profile" novalidate>
           <input id="name" name="popup_name" class="popup__input popup__input_js_name" type="text" placeholder="Имя" required minlength="2" maxlength="40">
           <span class="popup__error popup__error_js_name"></span>
           <input id="about" name="popup_about" class="popup__input popup__input_js_about" type="text" placeholder="Призвание" required  minlength="2" maxlength="200">
@@ -51,7 +51,7 @@
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form popup__form_type_add-card-js" name="popup_form" novalidate>
+        <form class="popup__form popup__form_type_add-card-js" name="popup_form-element" novalidate>
           <input id="photoName" name="popup_name" class="popup__input popup__input_js_name" type="text" placeholder="Название" required minlength="2" maxlength="30">
           <span class="popup__error popup__error_js_photoName"></span>
           <input id="link" name="popup_link" class="popup__input popup__input_js_link" type="url" placeholder="Ссылка на картинку" required>
@@ -65,7 +65,7 @@
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Обновить аватар</h2>
-        <form class="popup__form popup__form_type_avatar-update-js" name="popup_form" novalidate>
+        <form class="popup__form popup__form_type_avatar-update-js" name="popup_form-avatar-update" novalidate>
           <input id="link-update" name="popup_link-update" class="popup__input popup__input_js_link-update" type="url" placeholder="Ссылка на картинку" required>
           <span class="popup__error popup__error_js_link-update"></span>
           <button type="submit" class="popup__btn-save popup__btn-update">Сохранить</button>
@@ -77,7 +77,7 @@
       <div class="popup__container">
         <button type="button" class="popup__btn-close" aria-label="Закрыть"></button>
         <h2 class="popup__title">Вы уверены?</h2>
-        <form class="popup__form popup__form_type_delete-js" name="popup_form" novalidate>
+        <form class="popup__form popup__form_type_delete-js" name="popup_form-delete" novalidate>
           <button type="submit" class="popup__btn-delete">Да</button>
         </form>
       </div>
